--- a/pages/ubl/invoice.mdx
+++ b/pages/ubl/invoice.mdx
@@ -1,10 +1,27 @@
 # UBL Invoice
-# Invoice Field Definition
-| Field                 | Occuring |                         Defintion |
-|-----------------------|----------|-----------------------------------|
-|cbc:UBLVersionID       |1-1       | Version of UBL                    |
-|cbc:IssueDate          |1-1       | Invoice issue Date                |
-|cbc:InvoiceTypeCode    | 1-1      | Type of code of invoice           |
+The following table outlines the fields included in a UBL (Universal Business Language) invoice, their occurrence, their examples, and their definitions.
+## Core Invoice Fields Definition
+| Data Field            | Occurrence |                        Definition |
+|-----------------------|:------------:|-----------------------------------|
+|[cbc:UBLVersionID](./fields/id.mdx)| [0..1] | The version number for the UBL document. |
+|[cbc:ID](/test) |	[1..1] |	Unique identifier for the invoice.|
+|[cbc:DocumentCurrencyCode](/test) |	[1..1]	|The currency in which the invoice is denominated.
+|[cac:AccountingSupplierParty](/test) |	[1..1] |	Party supplying the goods or services in the invoice.
+|[cac:AccountingCustomerParty](/test) |	[1..1] |	Party to whom the goods or services are supplied.
+|[cac:PrepaidPayment](/test) |	[0..n] |	Prepaid payment(s) applied to the invoice.
+|[cac:TaxExchangeRate](/test) |	[0..1] |	Exchange rate applied for tax calculation in invoices involving conversion.
+|[cac:TaxTotal](/test) |	[1..n] |	Total tax amount for the invoice.
+|[cac:LegalMonetaryTotal](/test) | [1..1] |	Total amounts for the invoice.
+|[cac:InvoiceLine](/test) |	[1..n] |	Each individual line item of the invoice.
+|[cbc:IssueDate](/test) |	[1..1] |	Invoice issue Date.
+|[cbc:InvoiceTypeCode](/test) |	[1..1] |	Type of code of invoice.
+|[cbc:DocumentCurrencyCode](/test) |[1..1] |	Currency of the invoice amounts.
+|[cbc:TaxAmount](/test) |[1..n]|	Tax amount for a specific tax category.
+|[cbc:LineExtensionAmount](/test) |[1..n]|	Amount for a line item, excluding taxes.
+|[cbc:TaxExclusiveAmount](/test)	|[1..1]|	Amount excluding taxes.
+|[cbc:TaxInclusiveAmount](/test) |[1..1]|	Amount including taxes.
+|[cbc:PayableAmount](/test) |[1..1]| Total amount payable.
+
 
 
 ## Sample of UBL Invoice 
