--- a/pages/ubl/fields/DocumentCurrencyCode.mdx
+++ b/pages/ubl/fields/DocumentCurrencyCode.mdx
@@ -1,5 +1,5 @@
-# cbc:ID
-An identifier for this document, assigned by the sender.
+# cbc:DocumentCurrencyCode
+ A code signifying the default currency for this document.
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
@@ -8,6 +8,4 @@ An identifier for this document, assigned by the sender.
 
 ## Example 
 ```xml
-<cbc:ID>INV-GL0006</cbc:ID>
-```
-
+ <cbc:DocumentCurrencyCode>USD</cbc:DocumentCurrencyCode>
