--- a/pages/ubl/fields/DueDate.mdx
+++ b/pages/ubl/fields/DueDate.mdx
@@ -1,13 +1,12 @@
-# cbc:ID
-An identifier for this document, assigned by the sender.
+# cbc:DueDate
+The date on which Invoice is due.
 ## About
-* Occurence: [1..1]
+* Occurence: [0..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
 
 ## Example 
 ```xml
-<cbc:ID>INV-GL0006</cbc:ID>
+ <cbc:DueDate>2024-03-05</cbc:DueDate>
 ```
-
