--- a/pages/ubl/invoice.mdx
+++ b/pages/ubl/invoice.mdx
@@ -3,9 +3,8 @@ The following table outlines the fields included in a UBL (Universal Business La
 ## Core Invoice Fields Definition
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:UBLVersionID](./fields/id.mdx)| [0..1] | The version number for the UBL document. |
-|[cbc:ID](/test) |	[1..1] |	Unique identifier for the invoice.|
-|[cbc:DocumentCurrencyCode](/test) |	[1..1]	|The currency in which the invoice is denominated.
+|[cbc:ID](./fields/ID.mdx) |	[1..1] |	Unique identifier for the invoice.|
+|[cbc:DocumentCurrencyCode](./fields/DocumentCurrencyCode.mdx) |	[1..1]	|The currency in which the invoice is denominated.
 |[cac:AccountingSupplierParty](/test) |	[1..1] |	Party supplying the goods or services in the invoice.
 |[cac:AccountingCustomerParty](/test) |	[1..1] |	Party to whom the goods or services are supplied.
 |[cac:PrepaidPayment](/test) |	[0..n] |	Prepaid payment(s) applied to the invoice.
