--- a/pages/ubl/fields/IssueDate.mdx
+++ b/pages/ubl/fields/IssueDate.mdx
@@ -1,5 +1,5 @@
-# cbc:ID
-An identifier for this document, assigned by the sender.
+# cbc:IssueDate
+The date, assigned by the sender, on which this document was issued.
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
@@ -8,6 +8,5 @@ An identifier for this document, assigned by the sender.
 
 ## Example 
 ```xml
-<cbc:ID>INV-GL0006</cbc:ID>
+<cbc:IssueDate>2024-03-05</cbc:IssueDate>
 ```
-
