--- a/pages/ubl/fields/AccountingSupplierParty.mdx
+++ b/pages/ubl/fields/AccountingSupplierParty.mdx
@@ -1,10 +1,10 @@
-# cac:BillingReference
-A reference to a billing document associated with this document. 
+# cac:AccountingSupplierParty
+ The accounting supplier party.
 ## About
-* Occurence: [0..n]
+* Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
 
 ## Child elements
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:ID](./ID.mdx) |	[1..1] |	Unique identifier for the invoice.|
+|[cbc:Party](./Party.mdx) |	[1..1] |The supplier party itself.|
