change file structures for UBL fields

--- a/pages/ubl/debit-note/accounting-customer-party.mdx
+++ b/pages/ubl/debit-note/accounting-customer-party.mdx
@@ -7,4 +7,4 @@
 ## Child elements
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:Party](./Party.mdx) |	[1..1] |The customer party itself.|
+|[cac:Party](./Party.mdx) |	[1..1] |The customer party itself.|
