--- a/pages/ubl/credit-note/accounting-customer-party.mdx
+++ b/pages/ubl/credit-note/accounting-customer-party.mdx
@@ -1,4 +1,4 @@
-# cac:AccountingSupplierParty
+# cac:AccountingCustomerParty
  The accounting supplier party.
 ## About
 * Occurence: [1..1]
@@ -7,4 +7,4 @@
 ## Child elements
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:Party](./Party.mdx) |	[1..1] |The supplier party itself.|
+|[cac:Party](./Party.mdx) |	[1..1] |The customer party itself.|
