cac:Party completed

--- a/pages/ubl/invoice.mdx
+++ b/pages/ubl/invoice.mdx
@@ -3,7 +3,7 @@ The following table outlines the fields included in a UBL (Universal Business La
 ## Core Invoice Fields Definition
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cbc:ID](./invoice/id.mdx) |	[1..1] |Unique identifier for the invoice.|
+|[cbc:ID](./invoice/id.mdx) |	[1..1] |An identifier for this document, assigned by the sender.|
 |[cbc:IssueDate](./invoice/issue-date.mdx) |	[1..1] |Invoice issue date.
 |[cbc:DueDate](./invoice/due-date.mdx) |	[0..1] |  Free-form text pertinent to this document, conveying information that is not contained explicitly in other structures.
 |[cbc:InvoiceTypeCode](./invoice/invoice-type-code.mdx) | [0..1] |   A code signifying the type of the Invoice.
