--- a/pages/ubl/invoice/accounting-customer-party/party.mdx
+++ b/pages/ubl/invoice/accounting-customer-party/party.mdx
@@ -1,5 +1,5 @@
 # cbc:Party
-The accounting supplier/customer party.
+The accounting customer party.
 
 ## About
 
@@ -10,7 +10,7 @@ The accounting supplier/customer party.
 
 | Data Field                                    | Occurrence | Definition |
 |-----------------------------------------------|:----------:|------------|
-| [cbc:EndpointID](./EndpointID)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., EAN Location Number, GLN). |
+| [cbc:EndpointID](./EndpointID)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., MOC Single IDBCursor, VAT). |
 | [cac:PartyName](./PartyName)                       |   [0..*]   | A name for this party. |
 | [cac:PostalAddress](./PostalAddress)               |   [0..1]   | The party's postal address. |
 | [cac:PartyTaxScheme](./PartyTaxScheme)             |   [0..*]   | A tax scheme applying to this party. |
