--- a/pages/ubl/invoice/accounting-supplier-party/party.mdx
+++ b/pages/ubl/invoice/accounting-supplier-party/party.mdx
@@ -10,10 +10,49 @@ The accounting supplier/customer party.
 
 | Data Field                                    | Occurrence | Definition |
 |-----------------------------------------------|:----------:|------------|
-| [cbc:EndpointID](./EndpointID)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., EAN Location Number, GLN). |
-| [cac:PartyName](./PartyName)                       |   [0..*]   | A name for this party. |
+| [cbc:EndpointID](./EndpointID)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., MOC Single IDBCursor, VAT). |
+| [cac:PartyName](./party/party-name.mdx)                       |   [0..*]   | A name for this party. |
 | [cac:PostalAddress](./PostalAddress)               |   [0..1]   | The party's postal address. |
 | [cac:PartyTaxScheme](./PartyTaxScheme)             |   [0..*]   | A tax scheme applying to this party. |
 | [cac:PartyLegalEntity](./PartyLegalEntity)         |   [0..*]   | A description of this party as a legal entity. |
 | [cac:Contact](./Contact)                           |   [0..1]   | The primary contact for this party. |
 
+
+## Example
+```xml 
+<cac:Party>
+    <cbc:EndpointID>khuid00001234</cbc:EndpointID>
+    <cac:PartyName>
+        <cbc:Name>Company Kor</cbc:Name>
+    </cac:PartyName>
+    <cac:PostalAddress>
+        <cbc:ID schemeID="GLN" schemeAgencyID="9">1231412341324</cbc:ID>
+        <cbc:StreetName>Main street</cbc:StreetName>
+        <cbc:AdditionalStreetName>Suite 123</cbc:AdditionalStreetName>
+        <cbc:BuildingNumber>1</cbc:BuildingNumber>
+        <cbc:CityName>Phnom Penh</cbc:CityName>
+        <cbc:PostalZone>12100</cbc:PostalZone>
+        <cac:Country>
+            <cbc:IdentificationCode>KH</cbc:IdentificationCode>
+        </cac:Country>
+    </cac:PostalAddress>
+    <cac:PartyTaxScheme>
+        <cbc:CompanyID schemeID="DKVAT" schemeAgencyID="ZZZ">DK12345</cbc:CompanyID>
+        <cac:TaxScheme>
+        <cbc:ID schemeID="UN/ECE 5153" schemeAgencyID="6">VAT</cbc:ID>
+        </cac:TaxScheme>
+    </cac:PartyTaxScheme>
+    <cac:PartyLegalEntity>
+        <cbc:RegistrationName languageID="km">ក្រុមហ៊ុន ក</cbc:RegistrationName>
+        <cbc:CompanyID>K001-123456789</cbc:CompanyID>
+    </cac:PartyLegalEntity>
+    <cac:PartyLegalEntity>
+        <cbc:RegistrationName languageID="en">Company Kor </cbc:RegistrationName>
+        <cbc:CompanyID>K001-123456789</cbc:CompanyID>
+    </cac:PartyLegalEntity>
+    <cac:Contact>
+        <cbc:Telephone>023123123</cbc:Telephone>
+        <cbc:ElectronicMail>sample@gmail.com</cbc:ElectronicMail>
+    </cac:Contact>
+</cac:Party>
+```
