--- a/pages/ubl/invoice/document-currency-code.mdx
+++ b/pages/ubl/invoice/document-currency-code.mdx
@@ -1,5 +1,5 @@
-# cbc:InvoiceTypeCode
-A code signifying the type of the invoice.
+# cbc:DocumentCurrencyCode
+A code signifying the default currency for this document.
 
 ## About
 * Occurrence: [0..1]
@@ -9,4 +9,5 @@ A code signifying the type of the invoice.
 
 ## Example
 ```xml
-<cbc:InvoiceTypeCode>123</cbc:InvoiceTypeCode>
+<cbc:DocumentCurrencyCode>KHR</cbc:DocumentCurrencyCode>
+```
