--- a/pages/ubl/invoice/accounting-supplier-party.mdx
+++ b/pages/ubl/invoice/accounting-supplier-party.mdx
@@ -7,4 +7,13 @@
 ## Child elements
 | Data Field            | Occurrence |                        Definition |
 |-----------------------|:------------:|-----------------------------------|
-|[cac:Party](./Party.mdx) |	[1..1] |The supplier party itself.|
+|[cac:Party](./accounting-supplier-party/party.mdx) |	[1..1] |The supplier party itself.|
+
+## Example
+```xml
+<cac:AccountingSupplierParty>
+    <cac:Party>
+        ...
+    </cac:Party>
+</cac:AccountingSupplierParty>
+```
