--- a/pages/ubl/invoice/legal-monetary-total.mdx
+++ b/pages/ubl/invoice/legal-monetary-total.mdx
@@ -16,3 +16,16 @@ The total monetary amount that legally binds the parties to the transaction, cov
 | [cbc:ChargeTotalAmount](./ChargeTotalAmount.mdx)           |   [0..1]   | The total monetary amount of all charges. |
 | [cbc:PrepaidAmount](./PrepaidAmount.mdx)                   |   [0..1]   | The total prepaid monetary amount. |
 | [cbc:PayableAmount](./PayableAmount.mdx)                   |   [1..1]   | The amount of the monetary total to be paid. |
+
+## Example
+```xml
+<cac:LegalMonetaryTotal>
+    <cbc:LineExtensionAmount currencyID="USD">1436.5</cbc:LineExtensionAmount>
+    <cbc:TaxExclusiveAmount currencyID="USD">1436.5</cbc:TaxExclusiveAmount>
+    <cbc:TaxInclusiveAmount currencyID="USD">1729</cbc:TaxInclusiveAmount>
+    <cbc:AllowanceTotalAmount currencyID="USD">100</cbc:AllowanceTotalAmount>
+    <cbc:ChargeTotalAmount currencyID="USD">100</cbc:ChargeTotalAmount>
+    <cbc:PrepaidAmount currencyID="USD">1000</cbc:PrepaidAmount>
+    <cbc:PayableAmount currencyID="USD">729</cbc:PayableAmount>
+</cac:LegalMonetaryTotal>
+```
