--- a/pages/ubl/invoice/accounting-supplier-party/party.mdx
+++ b/pages/ubl/invoice/accounting-supplier-party/party.mdx
@@ -1,5 +1,5 @@
 # cbc:Party
-The accounting supplier/customer party.
+The accounting supplier party.
 
 ## About
 
@@ -10,12 +10,12 @@ The accounting supplier/customer party.
 
 | Data Field                                    | Occurrence | Definition |
 |-----------------------------------------------|:----------:|------------|
-| [cbc:EndpointID](./EndpointID)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., MOC Single IDBCursor, VAT). |
+| [cbc:EndpointID](./party/endpoint-id.mdx)                     |   [0..1]   | An identifier for the end point of the routing service (e.g., MOC Single IDBCursor, VAT). |
 | [cac:PartyName](./party/party-name.mdx)                       |   [0..*]   | A name for this party. |
-| [cac:PostalAddress](./PostalAddress)               |   [0..1]   | The party's postal address. |
-| [cac:PartyTaxScheme](./PartyTaxScheme)             |   [0..*]   | A tax scheme applying to this party. |
-| [cac:PartyLegalEntity](./PartyLegalEntity)         |   [0..*]   | A description of this party as a legal entity. |
-| [cac:Contact](./Contact)                           |   [0..1]   | The primary contact for this party. |
+| [cac:PostalAddress](./party/postal-address.mdx)               |   [0..1]   | The party's postal address. |
+| [cac:PartyTaxScheme](./party/party-tax-scheme.mdx)             |   [0..*]   | A tax scheme applying to this party. |
+| [cac:PartyLegalEntity](./party/party-legal-entity.mdx)         |   [0..*]   | A description of this party as a legal entity. |
+| [cac:Contact](./party/contact.mdx)                           |   [0..1]   | The primary contact for this party. |
 
 
 ## Example
