Finish Allowance Charge, Legal Monetary, Tax Exchange rate. Still Invoice Line and Tax Total left

--- a/pages/ubl/invoice/invoice-line/id.mdx
+++ b/pages/ubl/invoice/invoice-line/id.mdx
@@ -1,5 +1,5 @@
 # cbc:ID
-An identifier.
+An identifing number for the item. Should be Sequential.
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
@@ -8,6 +8,6 @@ An identifier.
 
 ## Example 
 ```xml
-<cbc:ID>INV-GL0006</cbc:ID>
+<cbc:ID>1</cbc:ID>
 ```
 
