--- a/pages/ubl/invoice/legal-monetary-total/charge-total-amount.mdx
+++ b/pages/ubl/invoice/legal-monetary-total/charge-total-amount.mdx
@@ -1,11 +1,11 @@
 
-# cbc:PayableAmount
+# cbc:ChargeTotalAmount
 
-The amount of the monetary total to be paid.
+The total monetary amount of all charges.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -17,4 +17,4 @@ The amount of the monetary total to be paid.
 ## Example
 
 ```xml
-<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
+<cbc:ChargeTotalAmount currencyID="USD">100.00</cbc:ChargeTotalAmount>
