--- a/pages/ubl/invoice/legal-monetary-total/prepaid-amount.mdx
+++ b/pages/ubl/invoice/legal-monetary-total/prepaid-amount.mdx
@@ -1,11 +1,11 @@
 
-# cbc:PayableAmount
+# cbc:PrepaidAmount
 
-The amount of the monetary total to be paid.
+The total prepaid monetary amount.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -17,4 +17,4 @@ The amount of the monetary total to be paid.
 ## Example
 
 ```xml
-<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
+<cbc:PrepaidAmount currencyID="USD">50.00</cbc:PrepaidAmount>
