--- a/pages/ubl/invoice/tax-exchange-rate.mdx
+++ b/pages/ubl/invoice/tax-exchange-rate.mdx
@@ -9,9 +9,9 @@ The exchange rate is applicable to the tax amount in a different currency. Only 
 
 | Data Field                                    | Occurrence | Definition |
 |-----------------------------------------------|:----------:|------------|
-| [cbc:SourceCurrencyCode](./SourceCurrencyCode.mdx)        |   [1..1]   | The reference currency for this exchange rate; the currency from which the exchange is being made. |
-| [cbc:TargetCurrencyCode](./TargetCurrencyCode.mdx)        |   [1..1]   | The target currency for this exchange rate; the currency to which the exchange is being made. |
-| [cbc:CalculationRate](./CalculationRate.mdx)              |   [1..1]   | The factor/rate applied to the source currency to calculate the target currency. |
+| [cbc:SourceCurrencyCode](./tax-exchange-rate/source-currency-code.mdx)        |   [1..1]   | The reference currency for this exchange rate; the currency from which the exchange is being made. |
+| [cbc:TargetCurrencyCode](./tax-exchange-rate/target-currency-code.mdx)        |   [1..1]   | The target currency for this exchange rate; the currency to which the exchange is being made. |
+| [cbc:CalculationRate](./tax-exchange-rate/calculation-rate.mdx)              |   [1..1]   | The factor/rate applied to the source currency to calculate the target currency. |
 
 ## Example
 ```xml
