--- a/pages/ubl/invoice/allowance-charge.mdx
+++ b/pages/ubl/invoice/allowance-charge.mdx
@@ -9,10 +9,10 @@ The conditions and amounts associated with an allowance or charge.
 
 | Data Field                                        | Occurrence | Definition |
 |---------------------------------------------------|:----------:|------------|
-| [cbc:ChargeIndicator](./ChargeIndicator.mdx)      |   [1..1]   | An indicator that this AllowanceCharge describes a charge (true) or a discount (false). |
-| [cbc:AllowanceChargeReason](./AllowanceChargeReason.mdx)         | [0..*] | The reason for this allowance or charge. |
-| [cbc:Amount](./Amount.mdx)                                       | [1..1] | The monetary amount of this allowance or charge to be applied. |
-| [cac:TaxTotal](./TaxTotal.mdx)                                   | [0..1] | The total of all the taxes applicable to this allowance or charge. |
+| [cbc:ChargeIndicator](./allowance-charge/charge-indicator.mdx)      |   [1..1]   | An indicator that this AllowanceCharge describes a charge (true) or a discount (false). |
+| [cbc:AllowanceChargeReason](./allowance-charge/allowance-charge-reason.mdx)         | [0..*] | The reason for this allowance or charge. |
+| [cbc:Amount](./allowance-charge/amount.mdx)                                       | [1..1] | The monetary amount of this allowance or charge to be applied. |
+| [cac:TaxTotal](./allowance-charge/tax-total.mdx)                                   | [0..1] | The total of all the taxes applicable to this allowance or charge. |
 
 ## Example
 ```xml
