--- a/pages/ubl/invoice/legal-monetary-total.mdx
+++ b/pages/ubl/invoice/legal-monetary-total.mdx
@@ -1,4 +1,4 @@
-# cac:LegalMonetaryTotal
+# cac:LegalMonetaryTotalLineExtensionAmount
 The total monetary amount that legally binds the parties to the transaction, covering the entire scope of the transaction.
 
 ## About
@@ -9,13 +9,13 @@ The total monetary amount that legally binds the parties to the transaction, cov
 
 | Data Field                                        | Occurrence | Definition |
 |---------------------------------------------------|:----------:|------------|
-| [cbc:LineExtensionAmount](./LineExtensionAmount.mdx)       |   [0..1]   | The monetary amount of an extended transaction line, net of tax and settlement discounts, but inclusive of any applicable rounding amount. |
-| [cbc:TaxExclusiveAmount](./TaxExclusiveAmount.mdx)         |   [0..1]   | The monetary amount of an extended transaction line, exclusive of taxes. |
-| [cbc:TaxInclusiveAmount](./TaxInclusiveAmount.mdx)         |   [0..1]   | The monetary amount including taxes; the sum of payable amount and prepaid amount. |
-| [cbc:AllowanceTotalAmount](./AllowanceTotalAmount.mdx)     |   [0..1]   | The total monetary amount of all allowances. |
-| [cbc:ChargeTotalAmount](./ChargeTotalAmount.mdx)           |   [0..1]   | The total monetary amount of all charges. |
-| [cbc:PrepaidAmount](./PrepaidAmount.mdx)                   |   [0..1]   | The total prepaid monetary amount. |
-| [cbc:PayableAmount](./PayableAmount.mdx)                   |   [1..1]   | The amount of the monetary total to be paid. |
+| [cbc:LineExtensionAmount](./legal-monetary-total/line-extension-amount.mdx)       |   [0..1]   | The monetary amount of an extended transaction line, net of tax and settlement discounts, but inclusive of any applicable rounding amount. |
+| [cbc:TaxExclusiveAmount](./legal-monetary-total/tax-exclusive-amount.mdx)         |   [0..1]   | The monetary amount of an extended transaction line, exclusive of taxes. |
+| [cbc:TaxInclusiveAmount](./legal-monetary-total/tax-inclusive-amount.mdx)         |   [0..1]   | The monetary amount including taxes; the sum of payable amount and prepaid amount. |
+| [cbc:AllowanceTotalAmount](./legal-monetary-total/allowance-total-amount.mdx)     |   [0..1]   | The total monetary amount of all allowances. |
+| [cbc:ChargeTotalAmount](./legal-monetary-total/charge-total-amount.mdx)           |   [0..1]   | The total monetary amount of all charges. |
+| [cbc:PrepaidAmount](./legal-monetary-total/prepaid-amount.mdx)                   |   [0..1]   | The total prepaid monetary amount. |
+| [cbc:PayableAmount](./legal-monetary-total/payable-amount.mdx)                   |   [1..1]   | The amount of the monetary total to be paid. |
 
 ## Example
 ```xml
