--- a/pages/ubl/invoice/legal-monetary-total/line-extension-amount.mdx
+++ b/pages/ubl/invoice/legal-monetary-total/line-extension-amount.mdx
@@ -1,11 +1,11 @@
 
-# cbc:PayableAmount
+# cbc:LineExtensionAmount
 
-The amount of the monetary total to be paid.
+The monetary amount of an extended transaction line, net of tax and settlement discounts, but inclusive of any applicable rounding amount.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -17,4 +17,4 @@ The amount of the monetary total to be paid.
 ## Example
 
 ```xml
-<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
+<cbc:LineExtensionAmount currencyID="USD">100.00</cbc:LineExtensionAmount>
