--- a/pages/ubl/invoice/legal-monetary-total/tax-exclusive-amount.mdx
+++ b/pages/ubl/invoice/legal-monetary-total/tax-exclusive-amount.mdx
@@ -1,11 +1,10 @@
+# cbc:TaxExclusiveAmount
 
-# cbc:PayableAmount
-
-The amount of the monetary total to be paid.
+The monetary amount of an extended transaction line, exclusive of taxes.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -17,4 +16,4 @@ The amount of the monetary total to be paid.
 ## Example
 
 ```xml
-<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
+<cbc:TaxExclusiveAmount currencyID="USD">80.00</cbc:TaxExclusiveAmount>
