--- a/pages/ubl/invoice/legal-monetary-total/tax-inclusive-amount.mdx
+++ b/pages/ubl/invoice/legal-monetary-total/tax-inclusive-amount.mdx
@@ -1,11 +1,10 @@
+# cbc:TaxInclusiveAmount
 
-# cbc:PayableAmount
-
-The amount of the monetary total to be paid.
+The monetary amount including taxes; the sum of payable amount and prepaid amount.
 
 ## About
 
-- Occurrence: [1..1]
+- Occurrence: [0..1]
 - Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
@@ -17,4 +16,4 @@ The amount of the monetary total to be paid.
 ## Example
 
 ```xml
-<cbc:PayableAmount currencyID="USD">150.00</cbc:PayableAmount>
+<cbc:TaxInclusiveAmount currencyID="USD">90.00</cbc:TaxInclusiveAmount>
