[IMP] Add introduction document

--- a/pages/document/authentication.mdx
+++ b/pages/document/authentication.mdx
@@ -3,6 +3,14 @@
 ## Description
 This endpoint is used to obtain a token for authentication.
 
+import React from 'react'
+import {Callout, Bleed} from 'nextra-theme-docs'
+
+
+<Callout type="info" emoji="👆🏻">
+  You need to using the credentials from [Merchant Portal](https://caminv-dev-merc.mef.gov.kh) that include **client_id** and **client_secrete** for authentication.
+</Callout>
+
 ## Method
 `POST`
 
