--- a/pages/ubl/invoice/invoice-line/tax-total/tax-subtotal/tax-amount.mdx
+++ b/pages/ubl/invoice/invoice-line/tax-total/tax-subtotal/tax-amount.mdx
@@ -1,7 +1,7 @@
 
 # cbc:TaxAmount
 
-The total tax amount for a particular taxation scheme, e.g., VAT; the sum of the tax subtotals for each tax category within the taxation scheme.
+The total tax amount for a particular taxation scheme.
 
 ## About
 
