--- a/pages/ubl/invoice/invoice-line/allowance-charge/tax-total.mdx
+++ b/pages/ubl/invoice/invoice-line/allowance-charge/tax-total.mdx
@@ -2,15 +2,15 @@
 The aggregate tax amount for a specific taxation scheme.
 
 ## About
-* Occurrence: [0..n]
+* Occurrence: [0..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
 
 ## Child elements
 
 | Data Field                                       | Occurrence | Definition |
 |--------------------------------------------------|:----------:|------------|
-| [cbc:TaxAmount](./tax-total/tax-amount.mdx)                 |   [1..1]   | The total tax amount for a particular taxation scheme, e.g., VAT; the sum of the tax subtotals for each tax category within the taxation scheme. |
-| [cac:TaxSubtotal](./tax-total/tax-subtotal.mdx)             |   [0..*]   | One of the subtotals the sum of which equals the total tax amount for a particular taxation scheme. |
+| [cbc:TaxAmount](./TaxAmount.mdx)                 |   [1..1]   | The total tax amount for a particular taxation scheme, e.g., VAT; the sum of the tax subtotals for each tax category within the taxation scheme. |
+| [cac:TaxSubtotal](./TaxSubtotal.mdx)             |   [0..*]   | One of the subtotals the sum of which equals the total tax amount for a particular taxation scheme. |
 
 ## Example
 ```xml
