Complete Invoice UBL fields, still need to review it

--- a/pages/ubl/invoice/invoice-line/item/standard-item-identification/id.mdx
+++ b/pages/ubl/invoice/invoice-line/item/standard-item-identification/id.mdx
@@ -1,5 +1,6 @@
 # cbc:ID
-An identifying number for the item. Should be Sequential.
+A standard identifying number for the item. 
+
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
@@ -8,6 +9,6 @@ An identifying number for the item. Should be Sequential.
 
 ## Example 
 ```xml
-<cbc:ID>1</cbc:ID>
+<cbc:ID>ABE13202</cbc:ID>
 ```
 
