--- a/pages/ubl/invoice/invoice-line/item.mdx
+++ b/pages/ubl/invoice/invoice-line/item.mdx
@@ -11,8 +11,7 @@ Element information for an item.
 | Data Field                             | Occurrence | Definition                                                                                                         |
 |----------------------------------------|:----------:|--------------------------------------------------------------------------------------------------------------------|
 | cbc:Description                       |   [0..*]   | Text describing this item.    
-| cbc:Name                              |   [0..1]   | Name of the item.                                                                                 |
-| cac:BuyersItemIdentification         |   [0..1]   | Identifying information for this item, assigned by the buyer.                                                      |
+| cbc:Name                              |   [0..1]   | Name of the item.                                                                                 |                                                 |
 | cac:SellersItemIdentification        |   [0..1]   | Identifying information for this item, assigned by the seller.                                                     |
 | cac:StandardItemIdentification      |   [0..1]   | Identifying information for this item, assigned according to a standard system.                                    |
 | cac:OriginCountry                    |   [0..1]   | The country of origin of this item.                                                                                |
