--- a/pages/ubl/invoice/accounting-customer-party.mdx
+++ b/pages/ubl/invoice/accounting-customer-party.mdx
@@ -1,5 +1,5 @@
 # cac:AccountingCustomerParty
- The accounting customer party.
+Represents the accounting customer party.
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
