--- a/pages/ubl/invoice/accounting-supplier-party.mdx
+++ b/pages/ubl/invoice/accounting-supplier-party.mdx
@@ -1,5 +1,5 @@
 # cac:AccountingSupplierParty
- The accounting supplier party.
+Represents the accounting supplier party.
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
