--- a/pages/ubl/invoice/allowance-charge.mdx
+++ b/pages/ubl/invoice/allowance-charge.mdx
@@ -1,5 +1,5 @@
 # cac:AllowanceCharge
-The conditions and amounts associated with an allowance or charge.
+The conditions and amounts related to an allowance or charge. An "allowance" typically denotes a discount, while a "charge" implies an additional fee.
 
 ## About
 * Occurrence: [0..1]
