--- a/pages/ubl/invoice/due-date.mdx
+++ b/pages/ubl/invoice/due-date.mdx
@@ -1,5 +1,5 @@
 # cbc:DueDate
-The date on which invoice is due.
+The date on which invoice is due. Date format must be YYYY-MM-DD.
 ## About
 * Occurence: [0..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
