--- a/pages/ubl/invoice/id.mdx
+++ b/pages/ubl/invoice/id.mdx
@@ -1,5 +1,5 @@
 # cbc:ID
-An identifier for this document, assigned by the sender.
+An identifier for this document, assigned by the sender. According to GDT, this ID should be sequential. 
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
