--- a/pages/ubl/invoice/invoice-line.mdx
+++ b/pages/ubl/invoice/invoice-line.mdx
@@ -1,5 +1,5 @@
 # cac:InvoiceLine
-A specific line of an invoice that describes a product or service included in the invoice.
+A specific line of an invoice that describes a product or service.
 
 ## About
 * Occurrence: [1..n]
