--- a/pages/ubl/invoice/invoice-type-code.mdx
+++ b/pages/ubl/invoice/invoice-type-code.mdx
@@ -1,5 +1,5 @@
 # cbc:InvoiceTypeCode
-A code signifying the type of the Invoice.
+A code indicating the type of the invoice. As tax invoices are currently the only type in use, this field is optional.
 ## About
 * Occurence: [0..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
@@ -8,6 +8,6 @@ A code signifying the type of the Invoice.
 
 ## Example 
 ```xml
-<cbc:InvoiceTypeCode>380</cbc:InvoiceTypeCode>
+<cbc:InvoiceTypeCode>388</cbc:InvoiceTypeCode>
 ```
 
