--- a/pages/ubl/invoice/issue-date.mdx
+++ b/pages/ubl/invoice/issue-date.mdx
@@ -1,5 +1,6 @@
 # cbc:IssueDate
-The date, assigned by the sender, on which this document was issued.
+The date, assigned by the sender, on which this document was issued. Date format must be YYYY-MM-DD.
+
 ## About
 * Occurence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
