--- a/pages/ubl/invoice/legal-monetary-total.mdx
+++ b/pages/ubl/invoice/legal-monetary-total.mdx
@@ -1,4 +1,4 @@
-# cac:LegalMonetaryTotalLineExtensionAmount
+# cac:LegalMonetaryTotal
 The total monetary amount that legally binds the parties to the transaction, covering the entire scope of the transaction.
 
 ## About
@@ -14,8 +14,8 @@ The total monetary amount that legally binds the parties to the transaction, cov
 | [cbc:TaxInclusiveAmount](./legal-monetary-total/tax-inclusive-amount.mdx)         |   [0..1]   | The monetary amount including taxes; the sum of payable amount and prepaid amount. |
 | [cbc:AllowanceTotalAmount](./legal-monetary-total/allowance-total-amount.mdx)     |   [0..1]   | The total monetary amount of all allowances. |
 | [cbc:ChargeTotalAmount](./legal-monetary-total/charge-total-amount.mdx)           |   [0..1]   | The total monetary amount of all charges. |
-| [cbc:PrepaidAmount](./legal-monetary-total/prepaid-amount.mdx)                   |   [0..1]   | The total prepaid monetary amount. |
-| [cbc:PayableAmount](./legal-monetary-total/payable-amount.mdx)                   |   [1..1]   | The amount of the monetary total to be paid. |
+| [cbc:PrepaidAmount](./legal-monetary-total/prepaid-amount.mdx)                    |   [0..1]   | The total prepaid monetary amount. |
+| [cbc:PayableAmount](./legal-monetary-total/payable-amount.mdx)                    |   [1..1]   | The amount of the monetary total to be paid. |
 
 ## Example
 ```xml
