--- a/pages/ubl/invoice/tax-exchange-rate.mdx
+++ b/pages/ubl/invoice/tax-exchange-rate.mdx
@@ -1,6 +1,5 @@
 # cac:TaxExchangeRate
-The exchange rate is applicable to the tax amount in a different currency. Only required when the document currency is not the tax currency (KHR).
-
+Represents the exchange rate applicable to the tax amount in a different currency. This element is required when the document currency differs from the tax currency (KHR).
 ## About
 * Occurrence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonAggregateComponents-2
