--- a/pages/ubl/invoice/document-currency-code.mdx
+++ b/pages/ubl/invoice/document-currency-code.mdx
@@ -1,13 +1,18 @@
 # cbc:DocumentCurrencyCode
-A code signifying the default currency for this document.
+An identifier representing the default currency for this document, selected from the [ISO 4217 code list](https://www.iban.com/currency-codes).
 
 ## About
-* Occurrence: [0..1]
+* Occurrence: [1..1]
 * Namespace: urn:oasis:names:specification:ubl:schema:xsd:CommonBasicComponents-2
 
 ## Attributes
 
-## Example
+## Example 1
 ```xml
 <cbc:DocumentCurrencyCode>KHR</cbc:DocumentCurrencyCode>
+```
+
+## Example 2
+```xml
+<cbc:DocumentCurrencyCode>USD</cbc:DocumentCurrencyCode>
 ```
