--- a/pages/ubl/invoice/invoice-line.mdx
+++ b/pages/ubl/invoice/invoice-line.mdx
@@ -9,13 +9,13 @@ A specific line of an invoice that describes a product or service.
 
 | Data Field                                      | Occurrence | Definition |
 |-------------------------------------------------|:----------:|------------|
-| [cbc:ID](./ID.mdx)                              |   [1..1]   | An identifier for this invoice line. |
-| [cbc:InvoicedQuantity](./InvoicedQuantity.mdx)  |   [0..1]   | The quantity (of items) on this invoice line. |
-| [cbc:LineExtensionAmount](./LineExtensionAmount.mdx) | [1..1] | The total amount for this invoice line, including allowance charges but net of taxes. |
-| [cac:AllowanceCharge](./AllowanceCharge.mdx)    |   [0..*]   | An allowance or charge associated with this invoice line. |
-| [cac:TaxTotal](./TaxTotal.mdx)                  |   [0..*]   | A total amount of taxes of a particular kind applicable to this invoice line. |
-| [cac:Item](./Item.mdx)                          |   [1..1]   | The item associated with this invoice line. |
-| [cac:Price](./Price.mdx)                        |   [0..1]   | The price of the item associated with this invoice line. |
+| [cbc:ID](./invoice-line/id.mdx)                              |   [1..1]   | An identifier for this invoice line. |
+| [cbc:InvoicedQuantity](./invoice-line/invoiced-quantity.mdx)  |   [0..1]   | The quantity (of items) on this invoice line. |
+| [cbc:LineExtensionAmount](./invoice-line/line-extension-amount.mdx) | [1..1] | The total amount for this invoice line, including allowance charges but net of taxes. |
+| [cac:AllowanceCharge](./invoice-line/allowance-charge.mdx)    |   [0..*]   | An allowance or charge associated with this invoice line. |
+| [cac:TaxTotal](./invoice-line/tax-total.mdx)                  |   [0..*]   | A total amount of taxes of a particular kind applicable to this invoice line. |
+| [cac:Item](./invoice-line/item.mdx)                          |   [1..1]   | The item associated with this invoice line. |
+| [cac:Price](./invoice-line/price.mdx)                        |   [0..1]   | The price of the item associated with this invoice line. |
 
 ## Example
 ```xml
