--- a/pages/ubl/invoice/invoice-line/item.mdx
+++ b/pages/ubl/invoice/invoice-line/item.mdx
@@ -10,8 +10,8 @@ Element information for an item.
 
 | Data Field                             | Occurrence | Definition                                                                                                         |
 |----------------------------------------|:----------:|--------------------------------------------------------------------------------------------------------------------|
-| cbc:Description                       |   [0..*]   | Text describing this item.    
-| cbc:Name                              |   [0..1]   | Name of the item.                                                                                 |                                                 |
-| cac:SellersItemIdentification        |   [0..1]   | Identifying information for this item, assigned by the seller.                                                     |
-| cac:StandardItemIdentification      |   [0..1]   | Identifying information for this item, assigned according to a standard system.                                    |
-| cac:OriginCountry                    |   [0..1]   | The country of origin of this item.                                                                                |
+| [cbc:Description](./item/description.mdx)                       |   [1..*]   | Text describing this item.    
+| [cbc:Name](./item/name.mdx)                              |   [0..1]   | Name of the item.                                                                                 |                                                 |
+| [cac:SellersItemIdentification](./item/sellers-item-identification.mdx)        |   [0..1]   | Identifying information for this item, assigned by the seller.                                                     |
+| [cac:StandardItemIdentification](./item/standard-item-identification.mdx)      |   [0..1]   | Identifying information for this item, assigned according to a standard system.                                    |
+| [cac:OriginCountry](./item/origin-country.mdx)                    |   [0..1]   | The country of origin of this item.                                                                                |
